@@ -145,6 +145,11 @@ static NodePtr node( Plug &p )
 	return p.node();
 }
 
+static PlugPtr getInput( Plug &p )
+{
+	return p.getInput<Plug>();
+}
+
 void GafferBindings::bindPlug()
 {
 	typedef PlugWrapper<Plug> Wrapper;
@@ -187,7 +192,7 @@ void GafferBindings::bindPlug()
 		.def( "setFlags", (void (Plug::*)( unsigned ) )&Plug::setFlags )
 		.def( "setFlags", (void (Plug::*)( unsigned, bool ) )&Plug::setFlags )
 		.GAFFERBINDINGS_DEFPLUGWRAPPERFNS( Plug )
-		.def( "getInput", (PlugPtr (Plug::*)())&Plug::getInput<Plug> )
+		.def( "getInput", &getInput )
 		.def( "removeOutputs", &Plug::removeOutputs )
 		.def( "outputs", &outputs )
 	;
